@@ -1,3 +1,4 @@
+	* fix file rename issue with name prefix matching torrent name
 	* fix division by zero when setting tick_interval > 1000
 	* fix move_storage() to its own directory (would delete the files)
 	* fix socks5 support for UDP
